app/assets/stylesheets/foundation_and_overrides.scss
/* ... */
#main {
    @extend .white-shade;
    margin-top: 1em;
}

.sidebar {
    height: 100%;
}

#sidebar-left {
//    @extend .white-shade;

    position: fixed;
    left: 0;
}

#sidebar-right {
//    @extend .white-shade;
    position: fixed;
    right: 0;
}

.sidebar-item {
    margin-bottom: 10px;

    div {

    }
}

.sidebar-headline {
    position: relative;
    z-index: 1;
}

.sidebar-content {
    @extend .padded;

    border-left: 1px solid rgba(0,39,23,0.1);
    position: relative;
    background: white !important;
}

.activity-title {
    line-height:1.25;
    text-align:left;
    font-size:2.955rem;
    margin-top:10!important;
    color: rgba(255,255,255,0.8);
}

.activity-shifts {
    @extend .padded;
}
.activity-area {

}

.scrollable {
    overflow-y: auto;
}

.sidebar-scrollable {
    @extend .scrollable;
}

#philosophy-sidebar {
    @extend .sidebar-scrollable;
    //height: 500px;
}

#activities-sidebar {
    @extend .sidebar-scrollable;
    //height: 500px;
}

.toggle {
    display: none;
}

.shift-content {
    @extend .blue-box;
    border-top: 1px solid rgba(0,39,23,0.2);
    border-left: 1px solid rgba(0,39,23,0.2);
    position: relative;
}

#shifts-modal {
    @extend .padded;
    @extend .bottom-shadow;
    @extend .special-box;

    background: white;
    position: relative;
    //display: inline-block;
//    top: 300px;
//    left: 100px;
    width: 100%;
}

.guest-field {
    display: none;
}

.staff-content {
    @extend .shift-content;
}

select {
    height: 3.4375rem;
}

.content {
    border-left: 1px solid rgba(51,51,51,0.2);
    border-right: 1px solid rgba(51,51,51,0.2);
    border-top: 1px solid rgba(51,51,51,0.1);
    border-radius: 2px;
    background: white;
}

.content-box {
    margin-top:10px;
    border: 1px solid rgba(51,51,51,0.2);
    background: white;
}

.special-box {
    border: 1px solid rgba(0,39,23,0.2);
    padding:10px 0;
    margin-top: 10px;
}

.hi-li {
    background: rgba(255,237,0,0.7);    
}

.hi-li-gradient {
    background: rgba(255,237,0,0.7);
    background: linear-gradient(to left top, rgba(255,237,0,0.5), rgba(255,237,0,0.9));
    //rgba(255,252,216,0.7), rgba(242,249,255,0.9));
    /*background: -webkit-linear-gradient(to left top, rgba(255,252,216,0.7), rgba(242,249,255,0.9));
    background: -o-linear-gradient(to left top, rgba(255,252,216,0.7), rgba(242,249,255,0.9));
    background: -moz-linear-gradient(to left top, rgba(255,252,216,0.7), rgba(242,249,255,0.9));*/
}

.hi-li-green-gradient {
    background: rgba(255,252,216,0.9);

    background: repeating-linear-gradient(to left top, rgba(50,154,17,0.4), rgba(50,154,17,0.9));
}

.hi-li-button {
    background: rgba(255,237,0,1);
    //background: linear-gradient(to left top, rgba(255,237,0,0.9), rgba(255,237,0,0.9));
}

.text-outline-dark {
    text-shadow: 1px 1px 1px rgba(55,55,55,0.1);
}

.text-outline-darker {
    text-shadow: 1px 1px 1px rgba(55,55,55,0.6);
}

.text-outline-darkest {
    text-shadow: 1px 1px 1px rgba(55,55,55,1);
}

.text-glow-yellow {
    text-shadow: 1px 1px 1px rgba(255,237,0,0.2);
}

.green {
    color: rgba(50,154,17,0.9);
}

.yellow {
    color: rgba(255,237,0,0.7);    
}

.padded {
    padding: 15px;
}

.padded-5 {
    padding: 5px;
}

.padded-left-5 {
    padding-left: 5px;
}

.padded-left {
    padding-left: 15px;
}

.padded-right {
    padding-right: 15px;
}

.padded-sides {
    @extend .padded-left;
    @extend .padded-right;
}

.padded-top-5 {
    padding-top: 5px;
}

.padded-top {
    padding-top: 15px;
}

.hi-li-box {
    @extend .hi-li;
    @extend .padded;

    font-size: 2rem;
    text-align: center;
}

.hi-li-green-box {
    @extend .hi-li-box;
    background: rgba(50,154,17,0.9);
}

.kaushan {
    font-family: 'Kaushan Script', 'Satisfy', 'Lateef', 'News Cycle', 'Kaushan Script', 'Roboto';
}

.one-rem {
    font-size: 1rem;
}
.two-rem {
    font-size: 2rem;
}
.three-rem {
    font-size: 3rem;
}
.four-rem {
    font-size: 4rem;
}
.five-rem {
    font-size: 5rem;
}

.blue-box {
    background:rgba(235,247,246,0.4);

    background: linear-gradient(to left top, white, rgba(235,247,246,0.3));
    /*background: -webkit-linear-gradient(to left top, rgba(255,252,216,0.7), rgba(242,249,255,0.9));
    background: -o-linear-gradient(to left top, rgba(255,252,216,0.7), rgba(242,249,255,0.9));
    background: -moz-linear-gradient(to left top, rgba(255,252,216,0.7), rgba(242,249,255,0.9));*/
}

.blue-box-outline {
    @extend .blue-box;
    border: 1px solid rgba(235,247,246,0.7);
    margin-bottom: 3px;
}

.blue-box-dark-outline {
    background:rgba(235,247,246,0.4);

    background: linear-gradient(to left top, white, rgba(235,247,246,1));
    /*background: -webkit-linear-gradient(to left top, rgba(255,252,216,0.7), rgba(242,249,255,0.9));
    background: -o-linear-gradient(to left top, rgba(255,252,216,0.7), rgba(242,249,255,0.9));
    background: -moz-linear-gradient(to left top, rgba(255,252,216,0.7), rgba(242,249,255,0.9));*/

    border: 1px solid rgba(235,247,246,1);
}

#articles {
    div {
        @extend .blue-box-outline;
    }
}

.p-box {
    @extend .content-box;

    background:rgba(235,247,246,0.4);

    background: linear-gradient(to left top, white, rgba(235,247,246,0.2));
    /*background: -webkit-linear-gradient(to left top, rgba(255,252,216,0.7), rgba(242,249,255,0.9));
    background: -o-linear-gradient(to left top, rgba(255,252,216,0.7), rgba(242,249,255,0.9));
    background: -moz-linear-gradient(to left top, rgba(255,252,216,0.7), rgba(242,249,255,0.9));

    */
    
    padding: 15px 25px;
    
    border: none;
    border-radius: 5px;
    text-align: justify;
    font-size: 2rem;

    p {
        padding: 15px 25px;
    }
}

.hidden {
    display:none;
}

.white-bg {
    background-color: white !important;
}
/* ... */

